# JCText

./: CMakeLists.txt
include/: jctext.h
source/: jctext.cpp
